--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
-  "name": "fcm-node",
+  "name": "fcm-test-server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "firebase-admin": "^13.6.0"
+    "express": "^4.18.2",
+    "firebase-admin": "^11.10.0"
   }
 }
