--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+   "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "firebase-admin": "^11.10.0"
   }
